assets: fix misalignment in action buttons when changing scheduler value
Close #1089.

--- a/assets/src/components/routes/ConnectionActions/ConnectionActions.css
+++ b/assets/src/components/routes/ConnectionActions/ConnectionActions.css
@@ -58,6 +58,10 @@
 	justify-content: end;
 }
 
+.connection-actions__scheduler-button::part(base) {
+	min-width: 130px;
+}
+
 .connection-actions__scheduler-options {
 	padding-left: 20px;
 	padding-right: 20px;
